--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-thunk": "^1.0.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
