--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "1.1.4",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
